2003-01-14  Roland Mas  <lolando@debian.org>

	* www/include/Layout.class: Split subMenu() into BeginSubMenu(),
	PrintSubMenu() and EndSubMenu().  subMenu() still exists, and
	calls these three methods in a row, giving the same net result.

	* www/include/html.php: Replaced the call to subMenu() in
	site_user_header by successive calls to the three aforementioned
	methods, with a plugin hook in-between.

	* deb-specific/install-postfix.sh: Applied patch #102 by Julien
	Goodwin.  Should have a better chance of a working
	gforge-mta-postfix now.  Thanks, Julien. 

2003-01-13 Reinhard Spisser (reinhard@spisser.it)

	* www/docman/*: fully localized
	
	* www/include/languages/Base.tab: added missing strings

	* www/include/language/Italian.tab: Italian Docman Localization

2003-01-13 Tom Copeland (tom@infoether.com)

	* www/survey/admin/add_survey.php: Survey title is now a required field.
	
	* www/project/admin/qrs.php: File name/type/release name/processor 
	type are now required fields.

2003-01-13  Tim Perdue (tim@gforge.org)

	* more simplication of db_stats_agg.php by creating views

2003-01-13  Scott Armstrong (scottbird7)

	* Fixed/completed /cronjobs/mail/* mailing list and alias creation
	scripts.

2003-01-12  Ryan T. Sammartino  <ryants@shaw.ca>

	* README.Custom: update theme info add add info about "include".

	* www/include/languages/Latin.tab: new file.

	* db/20030112.sql: add Latin as a supported language.

2003-01-11  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/account/index.php: Display new language immediately.

	* www/include/languages/PortugueseBrazilian.tab: use new include
	functionality to get default strings from Portuguese.

	* www/include/languages/Portuguese.tab: add missing newline.

	* www/include/languages/Base.tab: move Savannah-specific strings
	into their own .tab files.

	* www/include/languages/Spanish.tab: ditto.

	* www/themes/savannah_*/{Base,Spanish}.tab: new files with
	Savannah-specific strings.
